# recoll

./: INSTALL  Makefile.in  README  configure  configure.ac  makestaticdist.sh  recollinstall.in
aspell/: Makefile  rclaspell.cpp  rclaspell.h
bincimapmime/: COPYING  Makefile  convert.cc  convert.h  iodevice.cc  iodevice.h  iofactory.cc  iofactory.h  mime-inputsource.h  mime-parsefull.cc  mime-parseonlyheader.cc  mime-printbody.cc  mime-utils.h  mime.cc  mime.h  trbinc.cc
common/: Makefile  autoconfig.h.in  beaglequeuecache.cpp  beaglequeuecache.h  cstr.h  rclconfig.cpp  rclconfig.h  rclinit.cpp  rclinit.h  rclversion.h.in  textsplit.cpp  textsplit.h  unacpp.cpp  unacpp.h  unordered_defs.h  uproplist.h
desktop/: hotrecoll.py  recoll-searchgui.desktop
doc/man/: recoll.1  recoll.conf.5  recollindex.1  recollq.1
doc/prog/: Doxyfile
doc/user/: 00README.txt  Makefile  RCL.INDEXING.CONFIG.html  RCL.INDEXING.EXTATTR.html  RCL.INDEXING.EXTTAGS.html  RCL.INDEXING.MONITOR.html  RCL.INDEXING.PERIODIC.html  RCL.INDEXING.STORAGE.html  RCL.INDEXING.WEBQUEUE.html  RCL.INDEXING.html  RCL.INSTALL.BUILDING.html  RCL.INSTALL.CONFIG.html  RCL.INSTALL.EXTERNAL.html  RCL.INSTALL.html  RCL.INTRODUCTION.RECOLL.html  RCL.INTRODUCTION.SEARCH.html  RCL.INTRODUCTION.html  RCL.PROGRAM.API.html  RCL.PROGRAM.FIELDS.html  RCL.PROGRAM.html  RCL.SEARCH.ANCHORWILD.html  RCL.SEARCH.CASEDIAC.html  RCL.SEARCH.COMMANDLINE.html  RCL.SEARCH.DESKTOP.html  RCL.SEARCH.KIO.html  RCL.SEARCH.LANG.html  RCL.SEARCH.PTRANS.html  RCL.SEARCH.html  index.html  usermanual-italian.html  usermanual.html  usermanual.xml
filters/: ppt-dump.py  rclabw  rclaudio  rclchm  rcldia  rcldjvu  rcldoc  rcldvi  rclepub  rclexecm.py  rclfb2  rclgnm  rclics  rclimg  rclinfo  rclkar  rcllatinclass.py  rclmpdf  rclnull  rclokulnote  rclopxml  rclpdf  rclppt  rclps  rclpython  rclrar  rclrtf  rclshowinfo  rclsiduxman  rclsoff  rclsvg  rcltar  rcltex  rcltext  rclwar  rclwpd  rclxls  rclxml  rclzip  xls-dump.py  (+1 more)
index/: Makefile  beaglequeue.cpp  beaglequeue.h  bglfetcher.cpp  bglfetcher.h  fetcher.cpp  fetcher.h  fsfetcher.cpp  fsfetcher.h  fsindexer.cpp  fsindexer.h  indexer.cpp  indexer.h  mimetype.cpp  mimetype.h  rclmon.h  rclmon.sh  rclmonprc.cpp  rclmonrcv.cpp  recollindex.cpp  recollindex.h  subtreelist.cpp  subtreelist.h
internfile/: Filter.h  Makefile  extrameta.cpp  extrameta.h  indextext.h  internfile.cpp  internfile.h  mh_exec.cpp  mh_exec.h  mh_execm.cpp  mh_execm.h  mh_html.cpp  mh_html.h  mh_mail.cpp  mh_mail.h  mh_mbox.cpp  mh_mbox.h  mh_symlink.h  mh_text.cpp  mh_text.h  mh_unknown.h  mimehandler.cpp  mimehandler.h  myhtmlparse.cpp  myhtmlparse.h  txtdcode.cpp  uncomp.cpp  uncomp.h
kde/kioslave/kio_recoll/: 00README.txt  CMakeLists.txt  Makefile.kde3  cleancmakestuff.sh  dirif.cpp  htmlif.cpp  kio_recoll.cpp  kio_recoll.h  kio_recoll.la  notes.txt
lib/: mkMake.in
mk/: AIX  CYGWIN  Darwin  Default  FreeBSD  OpenBSD  SunOS  commondefs  commontargets  localdefs.in
php/: 00README.txt
php/recoll/: config.m4  make.sh  php_recoll.h  recoll.cpp
php/sample/: shell.php
python/recoll/: Makefile  pyrclextract.cpp  pyrecoll.cpp  pyrecoll.h  setup.py.in
python/recoll/recoll/: rclconfig.py
python/samples/: docdups.py  rclmbox.py  trconfig.py
python/samples/recollgui/: Makefile  qrecoll.py  rclmain.ui
qtgui/: advsearch_w.cpp  advsearch_w.h  advshist.cpp  advshist.h  crontool.cpp  crontool.h  editdialog.h  firstidx.h  fragbuts.cpp  fragbuts.h  guiutils.cpp  guiutils.h  idxsched.h  idxsched.ui  listdialog.h  main.cpp  multisave.cpp  multisave.h  preview_w.cpp  preview_w.h  ptrans_w.cpp  ptrans_w.h  rclhelp.cpp  rclhelp.h  rclmain.ui  rclmain_w.cpp  rclmain_w.h  rclzg.cpp  rclzg.h  recoll.h  recoll.pro.in  recoll.qrc  reslist.cpp  reslist.h  respopup.cpp  respopup.h  restable.cpp  restable.h  rtitool.cpp  rtitool.h  (+17 more)
qtgui/confgui/: confgui.cpp  confgui.h  confguiindex.cpp  confguiindex.h  conflinkrcl.h  main.cpp  trconf.pro
qtgui/i18n/: recoll_cs.qm  recoll_cs.ts  recoll_da.qm  recoll_da.ts  recoll_de.qm  recoll_de.ts  recoll_el.qm  recoll_el.ts  recoll_es.qm  recoll_es.ts  recoll_fr.qm  recoll_fr.ts  recoll_it.qm  recoll_it.ts  recoll_lt.qm  recoll_lt.ts  recoll_pl.qm  recoll_ru.qm  recoll_ru.ts  recoll_tr.qm  recoll_tr.ts  recoll_uk.qm  recoll_uk.ts  recoll_xx.ts  recoll_zh.qm  recoll_zh.ts  recoll_zh_CN.qm  recoll_zh_CN.ts
query/: Makefile  docseq.cpp  docseq.h  docseqdb.cpp  docseqdb.h  docseqdocs.h  docseqhist.cpp  docseqhist.h  dynconf.cpp  dynconf.h  filtseq.cpp  filtseq.h  plaintorich.cpp  plaintorich.h  recollq.cpp  recollq.h  reslistpager.cpp  reslistpager.h  sortseq.cpp  sortseq.h  wasastringtoquery.cpp  wasastringtoquery.h  wasatorcl.cpp  wasatorcl.h  xadump.cpp
rcldb/: Makefile  daterange.cpp  expansiondbs.cpp  expansiondbs.h  rclabstract.cpp  rcldb.cpp  rcldb.h  rcldb_p.h  rcldoc.cpp  rcldoc.h  rcldups.cpp  rclquery.cpp  rclquery.h  rclquery_p.h  rclterms.cpp  searchdata.cpp  searchdata.h  searchdataxml.cpp  stemdb.cpp  stemdb.h  stoplist.cpp  stoplist.h  synfamily.cpp  synfamily.h  termproc.h  xmacros.h
sampleconf/: fields  mimeconf  mimemap  mimeview  mimeview.mac  recoll.conf.in  recoll.qss
unac/: unac.cpp  unac.h
utils/: Makefile  appformime.cpp  appformime.h  base64.cpp  cancelcheck.h  circache.cpp  circache.h  closefrom.cpp  closefrom.h  conftree.cpp  conftree.h  copyfile.cpp  copyfile.h  cpuconf.cpp  cpuconf.h  debuglog.cpp  debuglog.h  ecrontab.cpp  ecrontab.h  execmd.cpp  execmd.h  fileudi.cpp  fileudi.h  fstreewalk.cpp  fstreewalk.h  hldata.h  idfile.cpp  idfile.h  md5.cpp  md5.h  mimeparse.cpp  mimeparse.h  netcon.cpp  netcon.h  pathut.cpp  pathut.h  ptmutex.cpp  ptmutex.h  pxattr.cpp  rclionice.cpp  (+17 more)
